[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/EndingScene/EndingScene.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Resources/Peepo.ttf"

[sub_resource type="DynamicFont" id=3]
size = 18
use_mipmaps = true
extra_spacing_bottom = -5
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
use_mipmaps = true
extra_spacing_bottom = -5
font_data = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.278431, 0.27451, 0.301961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Resources/Peepo.ttf"

[sub_resource type="DynamicFont" id=7]
size = 18
extra_spacing_top = -4
font_data = SubResource( 6 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 384.0
margin_bottom = 648.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paragraph1" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 40.0
margin_right = 278.0
margin_bottom = 95.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "... And they lived happily ever after, the end."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credit" type="Node2D" parent="Panel"]

[node name="thanks" type="Label" parent="Panel/credit"]
margin_left = 32.0
margin_top = 240.0
margin_right = 278.0
margin_bottom = 270.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Thanks for playing!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Label" parent="Panel/credit"]
margin_left = 32.0
margin_top = 288.0
margin_right = 278.0
margin_bottom = 331.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Credits"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rest" type="Label" parent="Panel/credit"]
margin_left = 32.0
margin_top = 344.0
margin_right = 278.0
margin_bottom = 374.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "By Xascoria
Discord: DungSC127#2114

Made in 48 hrs for
Miziziziz Jam 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 216.0
margin_top = 584.0
margin_right = 368.0
margin_bottom = 624.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Replay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
